moodify-services.yaml
# =====================
# Services
# =====================

apiVersion: v1
kind: Service
metadata:
  name: audioservice
spec:
  type: ClusterIP
  selector:
    app: audioservice
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: playlistservice
spec:
  type: ClusterIP
  selector:
    app: playlistservice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: authservice
spec:
  type: ClusterIP
  selector:
    app: authservice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: userservice
spec:
  type: ClusterIP
  selector:
    app: userservice
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
